<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:contentDescription="@string/img_description"
        app:srcCompat="@drawable/chess_logo" />

    <EditText
        android:id="@+id/editTextPlayer1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom|center"
        android:hint="@string/player_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPlayer2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom|center"
        android:hint="@string/player_2"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical|end"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:onClick="onInstructions"
            android:text="@string/instr_title" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal|center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:onClick="onStartChess"
            android:text="@string/start_game" />

    </FrameLayout>

</LinearLayout>