<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOverActivity" >

    <TextView
        android:id="@+id/textViewWinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/winner"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewLoser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/loser"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.3"
        android:onClick="onClickMainMenu"
        android:text="@string/gameoverButton" />
</LinearLayout>