<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ChessActivity">


    <view
        android:id="@+id/ChessView"
        class="mardero6.msu.chess.ChessView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="12" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/WelcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:onClick="onDone"
            android:text="@string/WelcomeMessage"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Done_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="15dp"
            android:onClick="onDone"
            android:text="@string/DoneButton" />

        <Button
            android:id="@+id/ResignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center_vertical"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="15dp"
            android:onClick="onResign"
            android:text="@string/ResignButton" />

    </FrameLayout>

</LinearLayout>